kubernetes/apps/default/misc-ingress/app/minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: &host minio.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 9002
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: default
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 9002
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
spec:
  ports:
    - name: http
      port: 9002
  type: ClusterIP
