kubernetes/apps/default/misc-ingress/app/opnsense-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: &host opnsense.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: opnsense
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense
  namespace: default
subsets:
  - addresses:
      - ip: ${OPNSENSE_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
