kubernetes/apps/default/misc-ingress/app/proxmox-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: &host prox.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: default
subsets:
  - addresses:
      - ip: ${PROXMOX_IP}
    ports:
      - name: http
        port: 8006
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  ports:
    - name: http
      port: 8006
  type: ClusterIP
